--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -77,28 +77,22 @@
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
         android:textColorHint="@color/grey4"
-        app:helperText="Required*"
         app:counterEnabled="true"
         app:counterMaxLength="50"
-        app:helperTextTextColor="@color/red2"
-        app:endIconDrawable="@drawable/ic_check_circle"
-        app:errorEnabled="true"
-        app:errorIconDrawable="@drawable/ic_error"
-        app:errorIconTint="@color/red"
         app:boxCornerRadiusTopEnd="10dp"
         app:endIconMode="custom">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.aran.mystoryapp.custom.EmailCustom
             android:id="@+id/email"
-            android:backgroundTint="@color/blue3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/blue3"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="10dp"
             android:fontFamily="@font/qs_medium"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textColor="@color/grey2"
-            android:hint="@string/email"
             android:textSize="15sp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -109,32 +103,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintEnd_toEndOf="@+id/edittext1"
-        app:layout_constraintStart_toStartOf="@+id/edittext1"
-        app:layout_constraintTop_toBottomOf="@+id/edittext1"
-        app:boxCornerRadiusTopStart="10dp"
+        android:layout_marginTop="20dp"
+        android:textColorHint="@color/grey4"
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
-        android:textColorHint="@color/grey4"
-        app:helperText="Required*"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:counterEnabled="true"
         app:counterMaxLength="30"
         app:endIconMode="password_toggle"
         app:errorEnabled="true"
-        app:helperTextTextColor="@color/red2"
-        app:boxCornerRadiusTopEnd="10dp">
+        app:layout_constraintEnd_toEndOf="@+id/edittext1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/edittext1"
+        app:layout_constraintTop_toBottomOf="@+id/edittext1">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.aran.mystoryapp.custom.PassCustom
             android:id="@+id/pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="10dp"
             android:fontFamily="@font/qs_medium"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:textColor="@color/grey2"
-            android:hint="@string/password"
             android:textSize="15sp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
