--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -72,6 +72,31 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_description"
         tools:ignore="ContentDescription" />
 
+    <TextView
+        android:id="@+id/location_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location : "
+        android:textSize="16sp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/qs_bold"
+        app:layout_constraintStart_toStartOf="@+id/img"
+        app:layout_constraintTop_toBottomOf="@+id/img"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="-"
+        android:textSize="16sp"
+        android:fontFamily="@font/qs_medium"
+        app:layout_constraintBottom_toBottomOf="@+id/location_txt"
+        app:layout_constraintStart_toEndOf="@+id/location_txt"
+        app:layout_constraintTop_toTopOf="@+id/location_txt"
+        tools:ignore="HardcodedText" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
