--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_map"
+        android:title="Google Maps"
+        android:icon="@drawable/ic_map"
+        app:showAsAction="collapseActionView|always"
+        tools:ignore="HardcodedText" />
+
     <item
         android:id="@+id/menu_language"
         android:title="@string/language_setting"
